compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__suggest_wrapping_a_value_into_error_if_types_match_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2798
expression: "\npub fn main() {\n    wibble(\"a\")\n}\n\nfn wibble(arg: Result(Int, String)) { todo }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    wibble("a")
}

fn wibble(arg: Result(Int, String)) { todo }


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:12
  │
3 │     wibble("a")
  │            ^^^ Did you mean to wrap this in an `Error`?

Expected type:

    Result(Int, String)

Found type:

    String
